# naukma_schedule

./: Cargo.toml  README.md  doc.sh  my_document.docx  schedule.json  Факультет Інформатики.Інженерія програмного забезпечення.xlsx  Факультет Економічних Наук.xlsx
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.ValueEnum.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/naukma_schedule/: all.html  fn.main.html  index.html  macro.impl_serde_display_fromstr!.html  macro.impl_serde_display_fromstr.html  sidebar-items.js  struct.Args.html
docs/naukma_schedule/error/: enum.ScheduleError.html  index.html  sidebar-items.js  type.ScheduleResult.html
docs/naukma_schedule/group/: enum.Auditorium.html  enum.Day.html  enum.LessonType.html  enum.Weeks.html  index.html  sidebar-items.js  struct.AuditoriumNumber.html  struct.Group.html  struct.LessonTime.html  struct.Time.html  type.GroupNumber.html
docs/naukma_schedule/macros/: index.html
docs/naukma_schedule/schedule/: enum.SpecialityName.html  index.html  sidebar-items.js  struct.Discipline.html  struct.Faculty.html  struct.Schedule.html  struct.Speciality.html  type.Disciplines.html  type.Specialities.html
docs/src/naukma_schedule/: error.rs.html  group.rs.html  macros.rs.html  main.rs.html  schedule.rs.html
src/: error.rs  group.rs  macros.rs  main.rs  schedule.rs
(+20 files in other folders)
