[package]
name = "naukma_schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.49"
clap = { version = "4.4.6", features = ["derive"] }
docx-rs = "0.4.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.58"
validator = { version = "0.16.1", features = ["derive"] }