[package]
name = "naukma_schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
calamine = "0.22.0"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.58"
thiserror = "1.0.49"
validator = { version = "0.16.1", features = ["derive"] }
